@@ -1,10 +1,27 @@
 package org.folio.inventory.dataimport.handlers.matching;
 
+import static java.lang.String.format;
+import static java.util.Objects.nonNull;
+import static org.apache.commons.collections.CollectionUtils.isNotEmpty;
+import static org.folio.inventory.dataimport.handlers.matching.util.EventHandlingUtil.buildMultiMatchErrorMessage;
+import static org.folio.processing.value.Value.ValueType.MISSING;
+import static org.folio.rest.jaxrs.model.Filter.ComparisonPartType;
+import static org.folio.rest.jaxrs.model.MatchExpression.DataValueType.VALUE_FROM_RECORD;
+import static org.folio.rest.jaxrs.model.ProfileType.MATCH_PROFILE;
+
 import io.vertx.core.Future;
 import io.vertx.core.http.HttpClient;
 import io.vertx.core.json.Json;
 import io.vertx.core.json.JsonArray;
 import io.vertx.core.json.JsonObject;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
+import java.util.stream.Stream;
 import org.apache.commons.collections.MapUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
@@ -14,12 +31,14 @@ import org.folio.DataImportEventTypes;
 import org.folio.HttpStatus;
 import org.folio.MatchDetail;
 import org.folio.MatchProfile;
+import org.folio.dataimport.util.DataImportHeaders;
 import org.folio.dataimport.util.FolioHeaders;
 import org.folio.inventory.client.wrappers.SourceStorageRecordsClientWrapper;
 import org.folio.inventory.common.Context;
 import org.folio.inventory.consortium.services.ConsortiumService;
 import org.folio.inventory.dataimport.handlers.matching.util.EventHandlingUtil;
 import org.folio.kafka.SimpleConfigurationReader;
+import org.folio.okapi.common.XOkapiHeaders;
 import org.folio.processing.events.services.handler.EventHandler;
 import org.folio.processing.exceptions.EventProcessingException;
 import org.folio.processing.exceptions.MatchingException;
@@ -39,35 +58,17 @@ import org.folio.rest.jaxrs.model.RecordIdentifiersDto;
 import org.folio.rest.jaxrs.model.RecordMatchingDto;
 import org.folio.rest.jaxrs.model.RecordsIdentifiersCollection;
 
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.concurrent.CompletableFuture;
-import java.util.stream.Stream;
-
-import static java.lang.String.format;
-import static java.util.Objects.nonNull;
-import static org.apache.commons.collections.CollectionUtils.isNotEmpty;
-import static org.folio.inventory.dataimport.handlers.matching.util.EventHandlingUtil.buildMultiMatchErrorMessage;
-import static org.folio.processing.value.Value.ValueType.MISSING;
-import static org.folio.rest.jaxrs.model.Filter.ComparisonPartType;
-import static org.folio.rest.jaxrs.model.MatchExpression.DataValueType.VALUE_FROM_RECORD;
-import static org.folio.rest.jaxrs.model.ProfileType.MATCH_PROFILE;
-
 public abstract class AbstractMarcMatchEventHandler implements EventHandler {
 
   protected static final Logger LOG = LogManager.getLogger();
 
   protected static final String CENTRAL_TENANT_ID_KEY = "CENTRAL_TENANT_ID";
   protected static final String RECORDS_IDENTIFIERS_FETCH_LIMIT_PARAM = "inventory.di.records.identifiers.fetch.limit";
-  private static final String PAYLOAD_HAS_NO_DATA_MESSAGE = "Failed to handle event payload, cause event payload context does not contain MARC_BIBLIOGRAPHIC data";
+  private static final String PAYLOAD_HAS_NO_DATA_MESSAGE =
+    "Failed to handle event payload, cause event payload context does not contain MARC_BIBLIOGRAPHIC data";
   private static final String RECORDS_NOT_FOUND_MESSAGE = "Could not find records matching specified conditions";
   private static final String MATCH_DETAIL_IS_INVALID_MESSAGE = "Match detail is invalid";
   private static final String MATCH_RESULT_KEY_PREFIX = "MATCHED_%s";
-  private static final String USER_ID_HEADER = "userId";
   private static final int EXPECTED_MATCH_EXPRESSION_FIELDS_NUMBER = 4;
   private static final String DEFAULT_RECORDS_IDENTIFIERS_LIMIT = "5000";
   private static final String FIELD_999 = "999";
@@ -105,19 +106,22 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
         return CompletableFuture.failedFuture(new EventProcessingException(PAYLOAD_HAS_NO_DATA_MESSAGE));
       }
       payload.getEventsChain().add(payload.getEventType());
-      payload.setAdditionalProperty(USER_ID_HEADER, context.get(USER_ID_HEADER));
+      payload.setAdditionalProperty(DataImportHeaders.USER_ID, context.get(DataImportHeaders.USER_ID));
 
       String recordAsString = context.get(getMarcType());
       MatchDetail matchDetail = retrieveMatchDetail(payload);
 
       if (!isValidMatchDetail(matchDetail)) {
-        LOG.warn("handle:: Match detail is invalid, jobExecutionId: '{}', match detail: '{}'", payload.getJobExecutionId(), matchDetail);
+        LOG.warn("handle:: Match detail is invalid, jobExecutionId: '{}', match detail: '{}'",
+          payload.getJobExecutionId(), matchDetail);
         return CompletableFuture.failedFuture(new EventProcessingException(MATCH_DETAIL_IS_INVALID_MESSAGE));
       }
 
-      Value<?> value = MarcValueReaderUtil.readValueFromRecord(recordAsString, matchDetail.getIncomingMatchExpression());
+      Value<?> value =
+        MarcValueReaderUtil.readValueFromRecord(recordAsString, matchDetail.getIncomingMatchExpression());
       if (value.getType() == MISSING) {
-        LOG.info("handle:: Could not find records by matching criteria because incoming record does not contain specified field, jobExecutionId: '{}'",
+        LOG.info(
+          "handle:: Could not find records by matching criteria because incoming record does not contain specified field, jobExecutionId: '{}'",
           payload.getJobExecutionId());
         return CompletableFuture.completedFuture(payload);
       }
@@ -127,13 +131,25 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
         .compose(recordsMatchingContext -> matchRecords(recordMatchingDto, recordsMatchingContext, payload))
         .compose(recordOptional -> ensureRelatedEntities(recordOptional, payload).map(recordOptional))
         .compose(recordOptional -> processSucceededResult(recordOptional, payload))
-        .onFailure(e -> LOG.warn("handle:: Failed to process event for MARC record matching, jobExecutionId: '{}'", payload.getJobExecutionId(), e))
+        .onFailure(e -> LOG.warn("handle:: Failed to process event for MARC record matching, jobExecutionId: '{}'",
+          payload.getJobExecutionId(), e))
         .toCompletionStage().toCompletableFuture();
     } catch (Exception e) {
       LOG.warn("handle:: Error while processing event for MARC record matching, jobExecutionId: '{}'",
         payload.getJobExecutionId(), e);
       return CompletableFuture.failedFuture(e);
     }
+  }
+
+  @Override
+  public boolean isEligible(DataImportEventPayload dataImportEventPayload) {
+    if (dataImportEventPayload.getCurrentNode() != null
+        && MATCH_PROFILE == dataImportEventPayload.getCurrentNode().getContentType()) {
+      var matchProfile =
+        JsonObject.mapFrom(dataImportEventPayload.getCurrentNode().getContent()).mapTo(MatchProfile.class);
+      return isEligibleMatchProfile(matchProfile);
+    }
+    return false;
   }
 
   protected abstract String getMarcType();
@@ -154,9 +170,9 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
   private boolean isNotValidPayload(DataImportEventPayload payload) {
     HashMap<String, String> context = payload.getContext();
     return MapUtils.isEmpty(context)
-      || StringUtils.isEmpty(payload.getContext().get(getMarcType()))
-      || Objects.isNull(payload.getCurrentNode())
-      || Objects.isNull(payload.getEventsChain());
+           || StringUtils.isEmpty(payload.getContext().get(getMarcType()))
+           || Objects.isNull(payload.getCurrentNode())
+           || Objects.isNull(payload.getEventsChain());
   }
 
   /**
@@ -174,22 +190,23 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
     } else {
       matchProfile = (MatchProfile) matchingProfileWrapper.getContent();
     }
-    return matchProfile.getMatchDetails().get(0);
+    return matchProfile.getMatchDetails().getFirst();
   }
 
   private boolean isValidMatchDetail(MatchDetail matchDetail) {
     if (matchDetail.getExistingMatchExpression() != null
-      && matchDetail.getExistingMatchExpression().getDataValueType() == VALUE_FROM_RECORD) {
+        && matchDetail.getExistingMatchExpression().getDataValueType() == VALUE_FROM_RECORD) {
       List<Field> fields = matchDetail.getExistingMatchExpression().getFields();
 
       return fields != null && fields.size() == EXPECTED_MATCH_EXPRESSION_FIELDS_NUMBER
-        && matchDetail.getIncomingRecordType() == EntityType.fromValue(getMarcType())
-        && matchDetail.getExistingRecordType() == EntityType.fromValue(getMarcType());
+             && matchDetail.getIncomingRecordType() == EntityType.fromValue(getMarcType())
+             && matchDetail.getExistingRecordType() == EntityType.fromValue(getMarcType());
     }
     return false;
   }
 
-  private RecordMatchingDto buildRecordsMatchingRequest(MatchDetail matchDetail, Value<?> value, DataImportEventPayload payload) {
+  private RecordMatchingDto buildRecordsMatchingRequest(MatchDetail matchDetail, Value<?> value,
+                                                        DataImportEventPayload payload) {
     List<Field> matchDetailFields = matchDetail.getExistingMatchExpression().getFields();
     String field = matchDetailFields.get(0).getValue();
     String ind1 = matchDetailFields.get(1).getValue();
@@ -210,9 +227,9 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
     if (qualifier != null) {
       qualifierValue = qualifier.getQualifierValue();
       qualifierFilterType = qualifier.getQualifierType() != null
-        ? Filter.Qualifier.valueOf(qualifier.getQualifierType().toString()) : null;
+                            ? Filter.Qualifier.valueOf(qualifier.getQualifierType().toString()) : null;
       comparisonPartType = qualifier.getComparisonPart() != null
-        ? ComparisonPartType.valueOf(qualifier.getComparisonPart().toString()) : null;
+                           ? ComparisonPartType.valueOf(qualifier.getComparisonPart().toString()) : null;
     }
 
     Filter matchCriteriaFilter = new Filter()
@@ -273,8 +290,8 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
   }
 
   private Future<RecordsMatchingContext> createRecordsMatchingContext(DataImportEventPayload payload) {
-    String userId = payload.getContext().get(USER_ID_HEADER);
-    String requestId = payload.getContext().get(EventHandlingUtil.OKAPI_REQUEST_ID);
+    String userId = payload.getContext().get(DataImportHeaders.USER_ID);
+    String requestId = payload.getContext().get(XOkapiHeaders.REQUEST_ID.toLowerCase());
     RecordsMatchingContext recordsMatchingContext = new RecordsMatchingContext();
     recordsMatchingContext.setLocalTenantRecordsClient(getSourceStorageRecordsClient(payload));
 
@@ -287,14 +304,13 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
 
     return consortiumService.getConsortiumConfiguration(context).map(consortiumConfigurationOptional -> {
       consortiumConfigurationOptional.ifPresent(consortiumConfiguration -> {
-        recordsMatchingContext.setCentralTenantId(consortiumConfiguration.getCentralTenantId());
+        recordsMatchingContext.setCentralTenantId(consortiumConfiguration.centralTenantId());
         recordsMatchingContext.setCentralTenantRecordsClient(
-          getSourceStorageRecordsClient(payload, consortiumConfiguration.getCentralTenantId()));
+          getSourceStorageRecordsClient(payload, consortiumConfiguration.centralTenantId()));
       });
       return recordsMatchingContext;
     });
   }
-
 
   private SourceStorageRecordsClient getSourceStorageRecordsClient(DataImportEventPayload payload) {
     return getSourceStorageRecordsClient(payload, payload.getTenant());
@@ -303,16 +319,16 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
   private SourceStorageRecordsClient getSourceStorageRecordsClient(DataImportEventPayload payload, String tenantId) {
     var folioHeaders = FolioHeaders.builder()
       .connectionUrl(payload.getOkapiUrl())
-      .userId(payload.getContext().get(USER_ID_HEADER))
+      .userId(payload.getContext().get(DataImportHeaders.USER_ID))
       .token(payload.getToken())
-      .requestId(payload.getContext().get(EventHandlingUtil.OKAPI_REQUEST_ID))
+      .requestId(payload.getContext().get(XOkapiHeaders.REQUEST_ID.toLowerCase()))
       .tenant(tenantId);
     return new SourceStorageRecordsClientWrapper(folioHeaders, httpClient);
   }
 
   private Future<Optional<Record>> matchRecords(RecordMatchingDto recordMatchingDto,
-                                            RecordsMatchingContext recordsMatchingContext,
-                                            DataImportEventPayload payload) {
+                                                RecordsMatchingContext recordsMatchingContext,
+                                                DataImportEventPayload payload) {
     SourceStorageRecordsClient localTenantStorageRecordsClient = recordsMatchingContext.getLocalTenantRecordsClient();
 
     Future<RecordsIdentifiersCollection> localMatchingFuture =
@@ -325,10 +341,12 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
       RecordsIdentifiersCollection centralMatchingRes = centralMatchingFuture.result();
 
       if (localMatchingRes.getTotalRecords() == 1 && centralMatchingRes.getIdentifiers().isEmpty()) {
-        return getRecordById(localMatchingRes.getIdentifiers().get(0), localTenantStorageRecordsClient, payload).map(Optional::of);
+        return getRecordById(localMatchingRes.getIdentifiers().getFirst(), localTenantStorageRecordsClient,
+          payload).map(Optional::of);
       } else if (localMatchingRes.getIdentifiers().isEmpty() && centralMatchingRes.getTotalRecords() == 1) {
         payload.getContext().put(CENTRAL_TENANT_ID_KEY, recordsMatchingContext.getCentralTenantId());
-        return getRecordById(centralMatchingRes.getIdentifiers().get(0), recordsMatchingContext.getCentralTenantRecordsClient(), payload).map(Optional::of);
+        return getRecordById(centralMatchingRes.getIdentifiers().getFirst(),
+          recordsMatchingContext.getCentralTenantRecordsClient(), payload).map(Optional::of);
       } else if (localMatchingRes.getIdentifiers().isEmpty() && centralMatchingRes.getIdentifiers().isEmpty()) {
         LOG.info("matchRecords:: {}, jobExecutionId: '{}', tenantId: '{}'",
           RECORDS_NOT_FOUND_MESSAGE, payload.getJobExecutionId(), payload.getTenant());
@@ -346,7 +364,8 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
     return getMatchedRecordsIdentifiers(recordMatchingDto, payload, sourceStorageRecordsClient)
       .compose(recordsIdentifiersCollection -> {
         if (recordsIdentifiersCollection.getIdentifiers().size() < recordsIdentifiersCollection.getTotalRecords()) {
-          return getRemainingRecordsIdentifiers(recordMatchingDto, payload, sourceStorageRecordsClient, recordsIdentifiersCollection);
+          return getRemainingRecordsIdentifiers(recordMatchingDto, payload, sourceStorageRecordsClient,
+            recordsIdentifiersCollection);
         }
         return Future.succeededFuture(recordsIdentifiersCollection);
       });
@@ -359,7 +378,8 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
     RecordMatchingDto matchingRequest = JsonObject.mapFrom(recordMatchingDto).mapTo(RecordMatchingDto.class);
     Future<RecordsIdentifiersCollection> future = Future.succeededFuture();
 
-    for (int offset = recordsIdentifiersLimit; offset < recordsIdentifiersCollection.getTotalRecords(); offset += recordsIdentifiersLimit) {
+    for (int offset = recordsIdentifiersLimit; offset < recordsIdentifiersCollection.getTotalRecords();
+         offset += recordsIdentifiersLimit) {
       matchingRequest.setOffset(offset);
       future = future.compose(v -> getMatchedRecordsIdentifiers(matchingRequest, payload, sourceStorageRecordsClient)
         .map(identifiersCollection -> {
@@ -378,13 +398,15 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
         if (response.statusCode() == HttpStatus.SC_OK) {
           return Future.succeededFuture(response.bodyAsJson(RecordsIdentifiersCollection.class));
         }
-        String msg = format("Failed to request records identifiers by matching criteria, responseStatus: '%s', body: '%s', jobExecutionId: '%s', tenant: '%s'",
+        String msg = format(
+          "Failed to request records identifiers by matching criteria, responseStatus: '%s', body: '%s', jobExecutionId: '%s', tenant: '%s'",
           response.statusCode(), response.bodyAsString(), payload.getJobExecutionId(), payload.getTenant());
         return Future.failedFuture(msg);
       });
   }
 
-  private Future<Record> getRecordById(RecordIdentifiersDto recordIdentifiersDto, SourceStorageRecordsClient sourceStorageRecordsClient,
+  private Future<Record> getRecordById(RecordIdentifiersDto recordIdentifiersDto,
+                                       SourceStorageRecordsClient sourceStorageRecordsClient,
                                        DataImportEventPayload payload) {
     String recordId = recordIdentifiersDto.getRecordId();
     return sourceStorageRecordsClient.getSourceStorageRecordsById(recordId)
@@ -392,7 +414,8 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
         if (response.statusCode() == HttpStatus.SC_OK) {
           return Future.succeededFuture(response.bodyAsJson(Record.class));
         }
-        String msg = format("Failed to retrieve record by id: '%s', responseStatus: '%s', body: '%s', jobExecutionId: '%s', tenant: '%s'",
+        String msg = format(
+          "Failed to retrieve record by id: '%s', responseStatus: '%s', body: '%s', jobExecutionId: '%s', tenant: '%s'",
           recordId, response.statusCode(), response.bodyAsString(), payload.getJobExecutionId(), payload.getTenant());
         return Future.failedFuture(msg);
       });
@@ -421,31 +444,23 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
     payload.getContext().put(getMultiMatchResultKey(), Json.encode(externalEntityIds));
   }
 
-  private Future<RecordsIdentifiersCollection> getMatchedRecordsIdentifiersOnCentralTenantIfNeeded(RecordMatchingDto recordMatchingDto,
-                                                                                                   RecordsMatchingContext recordsMatchingContext,
-                                                                                                   DataImportEventPayload payload) {
+  private Future<RecordsIdentifiersCollection> getMatchedRecordsIdentifiersOnCentralTenantIfNeeded(
+    RecordMatchingDto recordMatchingDto,
+    RecordsMatchingContext recordsMatchingContext,
+    DataImportEventPayload payload) {
     if (isMatchingOnCentralTenantRequired() && nonNull(recordsMatchingContext.getCentralTenantId())
-      && !recordsMatchingContext.getCentralTenantId().equals(payload.getTenant())) {
+        && !recordsMatchingContext.getCentralTenantId().equals(payload.getTenant())) {
       LOG.debug("getMatchedRecordsIdentifiersOnCentralTenantIfNeeded:: Matching on centralTenant with id: {}",
         recordsMatchingContext.getCentralTenantId());
-      return getAllMatchedRecordsIdentifiers(recordMatchingDto, payload, recordsMatchingContext.getCentralTenantRecordsClient());
+      return getAllMatchedRecordsIdentifiers(recordMatchingDto, payload,
+        recordsMatchingContext.getCentralTenantRecordsClient());
     }
     return Future.succeededFuture(new RecordsIdentifiersCollection().withTotalRecords(0));
   }
 
-  @Override
-  public boolean isEligible(DataImportEventPayload dataImportEventPayload) {
-    if (dataImportEventPayload.getCurrentNode() != null
-      && MATCH_PROFILE == dataImportEventPayload.getCurrentNode().getContentType()) {
-      var matchProfile = JsonObject.mapFrom(dataImportEventPayload.getCurrentNode().getContent()).mapTo(MatchProfile.class);
-      return isEligibleMatchProfile(matchProfile);
-    }
-    return false;
-  }
-
   private boolean isEligibleMatchProfile(MatchProfile matchProfile) {
     return matchProfile.getIncomingRecordType() == EntityType.fromValue(getMarcType())
-      && matchProfile.getExistingRecordType() == EntityType.fromValue(getMarcType());
+           && matchProfile.getExistingRecordType() == EntityType.fromValue(getMarcType());
   }
 
   /**
@@ -453,10 +468,11 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
    * based on the number of specified records in {@code records} list
    *
    * @param recordOptional matched record retrieved during matching processing
-   * @param payload event payload to prepare
+   * @param payload        event payload to prepare
    * @return Future of {@link DataImportEventPayload} with result of matching
    */
-  private Future<DataImportEventPayload> processSucceededResult(Optional<Record> recordOptional, DataImportEventPayload payload) {
+  private Future<DataImportEventPayload> processSucceededResult(Optional<Record> recordOptional,
+                                                                DataImportEventPayload payload) {
     if (recordOptional.isPresent()) {
       payload.setEventType(matchedEventType.toString());
       payload.getContext().put(getMatchedMarcKey(), Json.encode(recordOptional.get()));
@@ -482,7 +498,8 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
 
   private Future<DataImportEventPayload> handlePayloadWithMultiMatchResult(DataImportEventPayload payload) {
     if (canNextProfileProcessMultiMatchResult(payload)) {
-      LOG.info("handlePayloadWithMultiMatchResult:: Multiple records were found which match criteria, jobExecutionId: '{}', tenantId: '{}'",
+      LOG.info(
+        "handlePayloadWithMultiMatchResult:: Multiple records were found which match criteria, jobExecutionId: '{}', tenantId: '{}'",
         payload.getJobExecutionId(), payload.getTenant());
       payload.setEventType(matchedEventType.toString());
       return Future.succeededFuture(payload);
@@ -497,9 +514,10 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
 
   private boolean canNextProfileProcessMultiMatchResult(DataImportEventPayload eventPayload) {
     List<ProfileSnapshotWrapper> childProfiles = eventPayload.getCurrentNode().getChildSnapshotWrappers();
-    if (isNotEmpty(childProfiles) && ReactToType.MATCH.equals(childProfiles.get(0).getReactTo())
-      && MATCH_PROFILE.equals(childProfiles.get(0).getContentType())) {
-      MatchProfile nextMatchProfile = JsonObject.mapFrom(childProfiles.get(0).getContent()).mapTo(MatchProfile.class);
+    if (isNotEmpty(childProfiles) && ReactToType.MATCH.equals(childProfiles.getFirst().getReactTo())
+        && MATCH_PROFILE.equals(childProfiles.getFirst().getContentType())) {
+      MatchProfile nextMatchProfile =
+        JsonObject.mapFrom(childProfiles.getFirst().getContent()).mapTo(MatchProfile.class);
       return canSubMatchProfileProcessMultiMatchResult(nextMatchProfile);
     }
     return false;
@@ -515,26 +533,24 @@ public abstract class AbstractMarcMatchEventHandler implements EventHandler {
       return localTenantRecordsClient;
     }
 
-    public SourceStorageRecordsClient getCentralTenantRecordsClient() {
-      return centralTenantRecordsClient;
-    }
-
-    public String getCentralTenantId() {
-      return centralTenantId;
-    }
-
     public void setLocalTenantRecordsClient(SourceStorageRecordsClient sourceStorageRecordsClient) {
       this.localTenantRecordsClient = sourceStorageRecordsClient;
+    }
+
+    public SourceStorageRecordsClient getCentralTenantRecordsClient() {
+      return centralTenantRecordsClient;
     }
 
     public void setCentralTenantRecordsClient(SourceStorageRecordsClient sourceStorageRecordsClient) {
       this.centralTenantRecordsClient = sourceStorageRecordsClient;
     }
 
+    public String getCentralTenantId() {
+      return centralTenantId;
+    }
+
     public void setCentralTenantId(String centralTenantId) {
       this.centralTenantId = centralTenantId;
     }
-
   }
-
 }
